images/food.jpg

--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     </head>
 
     <body>
-        <h1>Recipes</h1>
-        <p>This is a basic HTML website aimed at teaching hyperlinks and website building</p>
+        <h1>TheOdin's Recipes</h1>
+        <p>A basic HTML website aimed at teaching hyperlinks
+            and website building, utilizing The Odin Project curriculum.
+            Below, you will find some useful recipes to help satisfy your
+            cravings for yummy snacks:</p>
 
         <ul>
-            <a href="recipes/lasagna.html">Lasagna</a>
-            <p><a href="recipes/pbj.html">Peanut Butter Jelly</a></p>
+            <a href="recipes/pbj.html"><h2>PBJ Sammy</h1></a>
+            <p><a href="recipes/milk.html"><h2>Choccy Milk</h1></a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><h2>Rick's Rolls</h1></a></p>
         </ul>
+    
+        <img src="./images/food.jpg">
     </body>
 </html>
